[gd_scene load_steps=44 format=2]

[ext_resource path="res://ZombEnemy.png" type="Texture" id=1]
[ext_resource path="res://Zombie.gd" type="Script" id=2]
[ext_resource path="res://hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://ZombieStats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Detact_player.tscn" type="PackedScene" id=5]
[ext_resource path="res://hitbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Attack_area.tscn" type="PackedScene" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.0
height = 7.0

[sub_resource type="CircleShape2D" id=2]
radius = 70.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 3.74712
height = 4.66224

[sub_resource type="Animation" id=4]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 16, 17 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("attack:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("attack/hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_finnisheddd"
} ]
}

[sub_resource type="Animation" id=5]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 23, 22, 21, 20, 19, 18 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("attack:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("attack/hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_finnisheddd"
} ]
}

[sub_resource type="Animation" id=6]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=7]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=8]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=9]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}

[sub_resource type="Animation" id=10]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 7 ]
}

[sub_resource type="Animation" id=11]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1 ]
}

[sub_resource type="Animation" id=12]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 4 ]
}

[sub_resource type="Animation" id=13]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 10 ]
}

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "idle_down"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "idle_up"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "idle_r"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "idle_l"

[sub_resource type="AnimationNodeBlendSpace2D" id=18]
blend_point_0/node = SubResource( 14 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 15 )
blend_point_1/pos = Vector2( 0, -1 )
blend_point_2/node = SubResource( 16 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 17 )
blend_point_3/pos = Vector2( -1, 0 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "attack_l"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "attack_l"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "attack_r"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "attack_r"

[sub_resource type="AnimationNodeBlendSpace2D" id=23]
blend_point_0/node = SubResource( 19 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 20 )
blend_point_1/pos = Vector2( -1, 0 )
blend_point_2/node = SubResource( 21 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 22 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "walk_l"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "walk_r"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "walk_down"

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "walk_up"

[sub_resource type="AnimationNodeBlendSpace2D" id=28]
blend_point_0/node = SubResource( 24 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 25 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 26 )
blend_point_2/pos = Vector2( 0, 1 )
blend_point_3/node = SubResource( 27 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachine" id=33]
states/Idle/node = SubResource( 18 )
states/Idle/position = Vector2( 91.247, 42.2099 )
states/attack/node = SubResource( 23 )
states/attack/position = Vector2( 92.1852, 125.667 )
states/walk/node = SubResource( 28 )
states/walk/position = Vector2( 299, 41.963 )
transitions = [ "Idle", "walk", SubResource( 29 ), "walk", "Idle", SubResource( 30 ), "attack", "Idle", SubResource( 31 ), "Idle", "attack", SubResource( 32 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=34]

[sub_resource type="CapsuleShape2D" id=35]
radius = 5.87116
height = 11.1503

[sub_resource type="CapsuleShape2D" id=36]
radius = 4.0
height = 5.0

[node name="Zombie" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="ZombieStats" parent="." instance=ExtResource( 4 )]
health = 3

[node name="Attack_area" parent="." instance=ExtResource( 7 )]
collision_mask = 2

[node name="CollisionShape2D" parent="Attack_area" index="0"]
shape = SubResource( 1 )

[node name="Detact_player" parent="." instance=ExtResource( 5 )]

[node name="CollisionShape2D" parent="Detact_player" index="0"]
position = Vector2( 0, 0.125 )
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.140305, 5.05108 )
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 24
frame = 14

[node name="AnimationEnemy1" type="AnimationPlayer" parent="."]
anims/attack_l = SubResource( 4 )
anims/attack_r = SubResource( 5 )
anims/idle_down = SubResource( 6 )
anims/idle_l = SubResource( 7 )
anims/idle_r = SubResource( 8 )
anims/idle_up = SubResource( 9 )
anims/walk_down = SubResource( 10 )
anims/walk_l = SubResource( 11 )
anims/walk_r = SubResource( 12 )
anims/walk_up = SubResource( 13 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 33 )
anim_player = NodePath("../AnimationEnemy1")
parameters/playback = SubResource( 34 )
parameters/Idle/blend_position = Vector2( 0, 0 )
parameters/attack/blend_position = Vector2( 0, 0 )
parameters/walk/blend_position = Vector2( 0, 0 )

[node name="hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 8

[node name="CollisionShape2D" parent="hurtbox" index="0"]
shape = SubResource( 35 )

[node name="attack" type="Position2D" parent="."]
position = Vector2( 0, -4 )

[node name="hitbox" parent="attack" instance=ExtResource( 6 )]
collision_mask = 4

[node name="CollisionShape2D" parent="attack/hitbox" index="0"]
position = Vector2( -4.5, 0 )
shape = SubResource( 36 )
disabled = true

[connection signal="no_health" from="ZombieStats" to="." method="_on_ZombieStats_no_health"]
[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]

[editable path="Attack_area"]
[editable path="Detact_player"]
[editable path="hurtbox"]
[editable path="attack/hitbox"]
